<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#BBB"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textWelcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:textSize="18sp" />
	<TextView
        android:id="@+id/textPreHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textWelcomeMsg"
        android:layout_below="@+id/textWelcomeMsg"
        android:text="@string/did_you_know_header"
        android:textSize="12sp" 
        android:textStyle="bold"
        android:background="#EEE"/>
    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textWelcomeMsg"
        android:layout_below="@+id/textPreHeader"
        android:text="@string/did_you_know_text"
        android:background="#DDD"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textHeader"
        android:layout_below="@+id/textHeader"
        android:layout_marginTop="15dp"
        android:text="@string/label_drinks"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textBeers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textSubHeader"
        android:layout_below="@+id/textSubHeader"
        android:layout_marginTop="22dp"
        android:text="@string/label_beers"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/fieldBeers"
        android:layout_width="40sp"
        android:layout_height="30sp"
        android:layout_alignBottom="@+id/textBeers"
        android:layout_alignRight="@+id/textHeader"
        android:ems="10"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textWine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textBeers"
        android:layout_below="@+id/fieldBeers"
        android:layout_marginTop="16dp"
        android:text="@string/label_wine"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/fieldWineGlasses"
        android:layout_width="40sp"
        android:layout_height="30sp"
        android:layout_alignBottom="@+id/textWine"
        android:layout_alignRight="@+id/fieldBeers"
        android:ems="10"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textShots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textWine"
        android:layout_below="@+id/fieldWineGlasses"
        android:layout_marginTop="21dp"
        android:text="@string/label_shots"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculateBACBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:text="*BAC = Blood Alcohol Percentage" />

    <TextView
        android:id="@+id/textHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textShots"
        android:layout_below="@+id/textShots"
        android:layout_marginTop="20dp"
        android:text="@string/label_hours"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/fieldHours"
        android:layout_width="40sp"
        android:layout_height="30sp"
        android:layout_above="@+id/calculateBACBtn"
        android:layout_alignRight="@+id/fieldShots"
        android:ems="10"
        android:textSize="12sp" />

    <Button
        android:id="@+id/calculateBACBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHours"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/textWine"
        android:text="@string/button_calc_text" />

    <EditText
        android:id="@+id/fieldShots"
        android:layout_width="40sp"
        android:layout_height="30sp"
        android:layout_above="@+id/textHours"
        android:layout_alignLeft="@+id/fieldBeers"
        android:ems="10"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textResultsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/label_results_header"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textResultsAsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResults"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResultsHeader"
        android:layout_centerHorizontal="true"
        android:background="#000"
        android:textColor="#FFF"
        android:textSize="16sp" />

</RelativeLayout>
